--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -18,7 +19,7 @@ body{
     font-size: 20px;
 }
 #cabecera {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
@@ -30,6 +31,11 @@ body{
     font-weight: normal;
     font-size: 0.8em;
 }
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
 #post{
+    background: white;
     padding: 1em;
 }
